rendered/envs/zoo/traefik/ingressclass-traefik.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  annotations:
    a8r.io/repository: git@github.com:kbudde/lab.git
    ingressclass.kubernetes.io/is-default-class: "true"
  labels:
    app.kubernetes.io/instance: traefik-traefik
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: traefik
    helm.sh/chart: traefik-25.0.0
  name: traefik
  namespace: traefik
spec:
  controller: traefik.io/ingress-controller
